--- a/client/src/components/pages/Status.css
+++ b/client/src/components/pages/Status.css
@@ -1,6 +1,24 @@
 .Status-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: baseline;
+  flex: 5;
+}
+
+.Status-subcontainer {
+  padding: var(--m);
+}
+
+.Status-profile-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: baseline;
+  flex: 5;
+}
+
+.Status-points-container {
+  margin-left: 100px;
+  margin-right: 100px;
 }
