--- a/client/src/components/pages/Status.css
+++ b/client/src/components/pages/Status.css
@@ -21,4 +21,9 @@
 .Status-points-container {
   margin-left: 100px;
   margin-right: 100px;
+  padding: 75px;
+  border-radius: var(--m);
+  border-width: medium;
+  border-style: groove;
+  border: black;
 }
