--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -32,7 +32,7 @@
 }
 
 body {
-  background-color: antiquewhite;
+  background-color: var(--white);
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
