commented out user stuff so we can run stuff without restarting the server

--- a/client/src/components/pages/Status.css
+++ b/client/src/components/pages/Status.css
@@ -23,7 +23,7 @@
   margin-right: 100px;
   padding: 75px;
   border-radius: var(--m);
-  border-width: medium;
+  border-width: 50px;
   border-style: groove;
   border: black;
 }
