--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,11 +1,15 @@
 .NavBar-container {
   padding: var(--s) var(--m);
-  background-color: var(--primary);
+  background-color: var(--white);
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
 .NavBar-title {
-  color: var(--white);
+  color: black;
   font-size: 20px;
+  height: 50px;
 }
 
 .NavBar-linkContainer {
@@ -14,7 +18,8 @@
 
 .NavBar-link,
 .NavBar-link:visited {
-  color: var(--white);
+  font-size: 20px;
+  color: black;
   opacity: 0.6;
   text-decoration: none;
 }
@@ -25,4 +30,36 @@
 
 .NavBar-link + .NavBar-link {
   margin-left: var(--m);
+}
+
+.NavBar-title-icon {
+  background-position-y: center;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: 90%;
+  background-image: url("./podmates-icon.png");
+}
+
+.NavBar-status-icon {
+  background-position-y: center;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: 90%;
+  background-image: url("./podmates-status-icon.png");
+}
+
+.NavBar-chores-icon {
+  background-position-y: center;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: 75%;
+  background-image: url("./podmates-chores-icon.png");
+}
+
+.NavBar-announcements-icon {
+  background-position-y: center;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: 40%;
+  background-image: url("./podmates-announcements-icon.png");
 }
