--- a/client/src/components/pages/Status.css
+++ b/client/src/components/pages/Status.css
@@ -2,28 +2,43 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: baseline;
+  align-items: center;
   flex: 5;
 }
 
 .Status-subcontainer {
-  padding: var(--m);
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .Status-profile-container {
   display: flex;
   flex-direction: row;
   justify-content: start;
-  align-items: baseline;
+  align-items: center;
   flex: 5;
+  padding: 16px;
+}
+
+.Status-single {
+  padding: 4px;
+}
+
+#profimg {
+  margin: 16px;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  background-position-y: center;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-image: url("./no-user-img.png");
 }
 
 .Status-points-container {
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 75px;
-  border-radius: var(--m);
-  border-width: 50px;
-  border-style: groove;
+  margin: 16px;
+  border-radius: 8px;
+  border-style: solid;
   border: black;
 }
