--- a/client/src/components/modules/ChoresSchedule.css
+++ b/client/src/components/modules/ChoresSchedule.css
@@ -1,7 +1,7 @@
 .ChoresSchedule-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  align-items: baseline;
   flex: 5;
 }
 
@@ -13,12 +13,16 @@
   font-size: small;
 }
 
+.ChoresSchedule-date {
+  width: 100px;
+}
+
 .ChoreSchedule-ids {
   font-size: 4px;
 }
 
 input[type="text"] {
-  /*width: 100%;*/
+  width: 100%;
   border-radius: 5px;
   border: 5px;
 }
