added polls! also redirects to status when join/new group

--- a/client/src/components/modules/Input.css
+++ b/client/src/components/modules/Input.css
@@ -13,7 +13,7 @@
   border-radius: 8px;
   color: black;
   font-family: "Montserrat", sans-serif;
-  width: 200px;
+  width: 20%;
   height: 50px;
   margin: 16px;
   padding: 8px;
