--- a/client/src/components/pages/Announcements.css
+++ b/client/src/components/pages/Announcements.css
@@ -56,6 +56,7 @@
   margin: 5px;
   border-radius: 5px;
   background-color: white;
+  padding: 5px;
 }
 
 .Announcements-tags-container {
@@ -70,4 +71,6 @@
   border-radius: 5px;
   margin: 8px;
   padding: 8px;
+  display: flex;
+  flex-direction: row;
 }
